// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshots tests: Coingeko > GET /pairs - Schema validation > Pairs 1`] = `
[
  {
    "base": "GASPV2",
    "pool_id": "5",
    "target": "GETH",
    "ticker_id": "GASPV2_GETH",
  },
  {
    "base": "L1Asset",
    "pool_id": "6",
    "target": "GETH",
    "ticker_id": "L1Asset_GETH",
  },
  {
    "base": "L1Asset",
    "pool_id": "7",
    "target": "GASPV2",
    "ticker_id": "L1Asset_GASPV2",
  },
  {
    "base": "GASPV2",
    "pool_id": "8",
    "target": "L1Asset",
    "ticker_id": "GASPV2_L1Asset",
  },
]
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 1`] = `
{
  "base_currency": "GASPV2",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "5",
  "target_currency": "GETH",
  "target_volume": Any<String>,
  "ticker_id": "GASPV2_GETH",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 2`] = `
{
  "base_currency": "L1Asset",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "6",
  "target_currency": "GETH",
  "target_volume": Any<String>,
  "ticker_id": "L1Asset_GETH",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 3`] = `
{
  "base_currency": "L1Asset",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "7",
  "target_currency": "GASPV2",
  "target_volume": Any<String>,
  "ticker_id": "L1Asset_GASPV2",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 4`] = `
{
  "base_currency": "GASPV2",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "8",
  "target_currency": "L1Asset",
  "target_volume": Any<String>,
  "ticker_id": "GASPV2_L1Asset",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 5`] = `
{
  "base_currency": "IMBU",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "13",
  "target_currency": "KSM",
  "target_volume": Any<String>,
  "ticker_id": "IMBU_KSM",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 6`] = `
{
  "base_currency": "MGX",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "17",
  "target_currency": "BNC",
  "target_volume": Any<String>,
  "ticker_id": "MGX_BNC",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 7`] = `
{
  "base_currency": "vsKSM",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "19",
  "target_currency": "KSM",
  "target_volume": Any<String>,
  "ticker_id": "vsKSM_KSM",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 8`] = `
{
  "base_currency": "vKSM",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "21",
  "target_currency": "KSM",
  "target_volume": Any<String>,
  "ticker_id": "vKSM_KSM",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 9`] = `
{
  "base_currency": "ZLK",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "27",
  "target_currency": "MGX",
  "target_volume": Any<String>,
  "ticker_id": "ZLK_MGX",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 10`] = `
{
  "base_currency": "KSM",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "28",
  "target_currency": "ZLK",
  "target_volume": Any<String>,
  "ticker_id": "KSM_ZLK",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 11`] = `
{
  "base_currency": "KSM",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "32",
  "target_currency": "USDT",
  "target_volume": Any<String>,
  "ticker_id": "KSM_USDT",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 12`] = `
{
  "base_currency": "MGX",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "33",
  "target_currency": "RMRK",
  "target_volume": Any<String>,
  "ticker_id": "MGX_RMRK",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 13`] = `
{
  "base_currency": "KSM",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "34",
  "target_currency": "RMRK",
  "target_volume": Any<String>,
  "ticker_id": "KSM_RMRK",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 14`] = `
{
  "base_currency": "KSM",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "42",
  "target_currency": "BNC",
  "target_volume": Any<String>,
  "ticker_id": "KSM_BNC",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 15`] = `
{
  "base_currency": "MGX",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "43",
  "target_currency": "MOVR",
  "target_volume": Any<String>,
  "ticker_id": "MGX_MOVR",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 16`] = `
{
  "base_currency": "IMBU",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "45",
  "target_currency": "TUR",
  "target_volume": Any<String>,
  "ticker_id": "IMBU_TUR",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 17`] = `
{
  "base_currency": "USDT",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "47",
  "target_currency": "MGX",
  "target_volume": Any<String>,
  "ticker_id": "USDT_MGX",
}
`;

exports[`Snapshots tests: Coingeko > GET /tickers - Schema validation 18`] = `
{
  "base_currency": "TUR",
  "base_volume": Any<String>,
  "last_price": Any<String>,
  "liquidity_in_usd": Any<String>,
  "pool_id": "48",
  "target_currency": "BNC",
  "target_volume": Any<String>,
  "ticker_id": "TUR_BNC",
}
`;
